2010-07-14  Andy Buckley  <andy@insectnation.org>

	* Adding a manual section on use of Rivet (and AGILe) as
	libraries, and how to use the -config scripts to aid compilation.

	* FastJets projection now allows setting of a jet area definition,
	plus a hacky mapping for getting the area-enabled cluster
	sequence. Requested by Pavel Starovoitov & Paolo Francavilla.

	* Lots of script updates in last two weeks!

2010-06-30  Andy Buckley  <andy@insectnation.org>

	* Minimising amount of Log class mapped into SWIG.

	* Making Python ext build checks fail with error rather than
	warning if it has been requested (or, rather, not explicitly
	disabled).

2010-06-28  Andy Buckley  <andy@insectnation.org>

	* Converting rivet Python module to be a package, with the dlopen
	flag setting etc. done around the SWIG generated core wrapper
	module (rivet.rivetwrap).

	* Requiring Python >= 2.4.0 in rivet scripts (and adding a Python
	version checker function to rivet module)

	* Adding --epspng option to make-plots (and converting to use subprocess.Popen).

2010-06-27  Andy Buckley  <andy@insectnation.org>

	* Converting JADE_OPAL analysis to use the fastjet
	exclusive_ymerge_*max* function, rather than just
	exclusive_ymerge: everything looks good now. It seems that fastjet
	>= 2.4.2 is needed for this to work properly.

2010-06-24  Andy Buckley  <andy@insectnation.org>

	* Making rivet-buildplugin look in its own bin directory when
	trying to find rivet-config.

2010-06-23  Andy Buckley  <andy@insectnation.org>

	* Adding protection and warning about numerical precision issues
	in jet mass calculation/histogramming to the MC_JetAnalysis
	analysis.

	* Numerical precision improvement in calculation of
	Vector4::mass2.

	* Adding relative scale ratio plot flag to compare-histos

	* Extended command completion to rivet-config, compare-histos, and
	make-plots.

	* Providing protected log messaging macros,
	MSG_{TRACE,DEBUG,INFO,WARNING,ERROR} cf. Athena.
